fix: changed spacing for small screens

--- a/homeworks/ivan-ishchenko/04-css/styles/main.css
+++ b/homeworks/ivan-ishchenko/04-css/styles/main.css
@@ -29,6 +29,10 @@
 }
 
 @media screen and (max-width: 600px) {
+  .tabs {
+    margin-top: 60px;
+  }
+
   .tabs__item {
     height: 60px;
   }
